--- a/undervisningsopgaver/Babushka/singleview/style.css
+++ b/undervisningsopgaver/Babushka/singleview/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     font-family: verdana;
+    font-size: 16px;
 }
 
 .header_more {
@@ -63,27 +64,57 @@ button.selected {
 
 
 .img_container {
-    max-width: 25vw;
-    max-height: 16.5625vw;
+    max-width: 25rem;
+    max-height: 16.5625rem;
+    min-height: 8rem;
+    /*   height: 0;*/
     border-radius: 30px;
     overflow: hidden;
     margin: auto;
+    position: relative;
 
 
 }
 
 .img_container_more {
-    max-width: 25vw;
-    max-height: 16.5625vw;
+    max-width: 25em;
+    max-height: 16.5625em;
     border-radius: 30px;
     overflow: hidden;
     margin: auto;
     filter: saturate(1.2);
 }
 
+/*det her havde freja lavet, se lige på det. Få det til at virke med mine billeder. -Nu har jeg brugt noget af det samme. og billedrne bliver inden i rammen nu*/
+/*
+.list .img_container {
+    width: 100%;
+    height: 0;
+    padding-top: 67.25%;
+    overflow: hidden;
+    position: relative;
+}
+
+.list .img-container img {
+    position: absolute;
+    top: :50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}*/
+
 
 img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 
 }
 
